tests/kiama/negative/type_errors/L2/8_badfor4.ob
MODULE badfor;

VAR
    avar : INTEGER;
    cvar : INTEGER;

BEGIN
    FOR avar := 1 TO 2 BY cvar * 2 DO
        avar := 42
    END
END badfor.
